<resources>
    <!--Activities-->
    <string name="app_name">QuizUZ</string>
    <string name="title_activity_game_main">QuizUZ</string>
    <string name="title_activity_game_categories">Kategorie</string>
    <string name="title_activity_game_stats">Statystyki</string>
    <string name="title_activity_game_authors">Autorzy</string>
    <string name="title_activity_game_help">Pomoc</string>
    <string name="title_activity_game_over">Koniec gry!</string>

    <!--Main menu buttons-->
    <string name="playButtonText">Graj!</string>
    <string name="randomCategoryButtonText">Losowa kategoria</string>
    <string name="categoriesButtonText">Kategorie</string>
    <string name="statsButtonText">Statystyki</string>
    <string name="authorsButtonText">Autorzy</string>

    <!--Main game screen-->
    <string name="questionText">Pytanie</string>
    <string name="answerButtonText">Odpowiedź</string>

    <!--Categories screen-->
    <string name="allCatButtonText">Wszystkie</string>

    <!--Authors screen-->
    <string name="authorsText">
        Gra stworzona na potrzeby konkursu \"Call of Code - First Lane\" przeprowadzanego przez firmę GlobalLogic
        &lt;br>&lt;br>Autorzy:&lt;br>&lt;b>Mateusz Borowski&lt;/b>&lt;br>&lt;b>Paweł Jamroziak&lt;/b>
    </string>

    <!--Statistics screen-->
    <string name="playedGamesText">Rozegrane gry:</string>
    <string name="wonGamesText">Wygrane gry:</string>
    <string name="lostGamesText">Prezegrane gry:</string>
    <string name="correctAnswersText">Poprawne odpowiedzi:</string>
    <string name="incorrectAnswersText">Niepoprawne odpowiedzi:</string>
    <string name="resetStatsButtonText">Resetuj</string>
    <string name="zeroText">0</string>

    <!--Help screen-->
    <string name="helpText">
        &lt;b>Graj!&lt;/b> - rozpoczyna nową grę z losową kategorią
        &lt;br>&lt;br>&lt;b>Kategorie&lt;/b> - otwiera listę kategorii
        &lt;br>&lt;br>&lt;b>Statystyki&lt;/b> - otwiera okno statystyk
        &lt;br>&lt;br>&lt;b>Autorzy&lt;/b> - otwiera okno z informacjami o autorach aplikacji
        &lt;br>&lt;br>&lt;b>?&lt;/b> - otwiera aktualnie otwarte okno
    </string>
    <string name="startAgainButtonText">Zagraj ponownie</string>
    <string name="returnToMainMenuButtonText">Wróć do menu</string>
    <string name="selectedCatText">Wybrane kategorie:</string>
</resources>
